--- a/spring-jdbc-mariadb-mysql/pom.xml
+++ b/spring-jdbc-mariadb-mysql/pom.xml
@@ -39,6 +39,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- http://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.16.6</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
